test/subjects/errors/assign_const_by_ref.php
<?php

	define (X, 5);

	// { phc-error: syntax error, unexpected ';', expecting O_COLONCOLON }
	$y =& X;

?>
